--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,5 +46,12 @@
     android:layout_height="wrap_content"
     android:text="Audio ▶︎"/>
 
+        <Button
+    android:id="@+id/calibBtn"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Calibrate"/>
+
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
